--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.1.0
 Automat==22.10.0
+blinker==1.6.3
 certifi==2023.7.22
-cffi==1.15.0
+cffi==1.16.0
 charset-normalizer==3.3.0
+click==8.1.7
 colorama==0.4.6
 config==0.5.1
 constantly==15.1.0
@@ -16,6 +18,7 @@ django-commands==0.7
 et-xmlfile==1.1.0
 exceptiongroup==1.1.3
 filelock==3.12.4
+Flask==3.0.0
 frozenlist==1.4.0
 h11==0.14.0
 hyperlink==21.0.0
@@ -24,8 +27,11 @@ incremental==22.10.0
 iniconfig==2.0.0
 itemadapter==0.8.0
 itemloaders==1.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
 jmespath==1.0.1
 lxml==4.9.3
+MarkupSafe==2.1.3
 multidict==6.0.4
 oauthlib==3.2.2
 openpyxl==3.1.2
@@ -63,6 +69,7 @@ typing_extensions==4.8.0
 urllib3==2.0.7
 validators==0.22.0
 w3lib==2.1.2
+Werkzeug==3.0.0
 wsproto==1.2.0
 yarl==1.9.2
 zope.interface==6.1
